# moondream-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
common/: CMakeLists.txt  moondream.h  tokenizer.h
common/include/moondream/: constants.h  image.h  moondream.h  tensor.h  tokenizer.h  utils.h
desktop/: CMakeLists.txt  main.cpp
mobile/: CMakeLists.txt  Main.qml  main.cpp  modeldownloader.cpp  modeldownloader.h  moondream_wrapper.cpp  moondream_wrapper.h  moondreamwrapper.cpp  moondreamwrapper.h
scripts/: convert.py
